[package]
name = "aoc2020"
version = "0.1.0"
authors = ["asaaki <asaaki@mannaz.cc>"]
edition = "2018"

[lib]
name = "aoc_macros"
path = "src/aoc_macros.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
num_enum = "0.5"
